# LLVM-small-C-IR-Optimizer

./: .gitignore  A5Dom.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
testcases/: test0.ll  test1.ll  test10.ll  test12.ll  test13.ll  test14.ll  test15.ll  test16.ll  test17.ll  test18.ll  test2.ll  test3.ll  test4.ll  test5.ll  test6.ll  test7.ll  test8.ll  test9.ll
